refactor: tp4-e2-unsorted-priority-queue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.analysis.extraPaths": [
         "./edd_week_5/biblioteca/modelos",
         "./edd_week_8/data_structures",
-        "./edd_week_8/data_structures/trees"
+        "./edd_week_8/data_structures/trees",
+        "./edd_week_8/priority_queue"
     ]
 }
